nginx-autoindex/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: nginx
    weight: 100
